# agentDock

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build-profile.json5  code-linter.json5  hvigorfile.ts  oh-package.json5  undefined
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  compliance.yml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/base/media/: README.md
THIRD_PARTY_LICENSES/: README.md
THIRD_PARTY_LICENSES/hnswlib/: METADATA.json
THIRD_PARTY_LICENSES/llama.cpp/: METADATA.json
common/core-agent/: Index.ets  consumer-rules.txt  oh-package-lock.json5  oh-package.json5
common/core-agent/src/main/: module.json5
common/core-agent/src/main/ets/chat/: AsyncEventQueue.ts  ChatCompactor.ets  ChatPromptBuilder.ets  ChatRepository.ets  ChatTypes.ets
common/core-agent/src/main/ets/context/: ContextGovernor.ets  FidelityGate.ets  GovernorDefaults.ets
common/core-agent/src/main/ets/model/: AgentDef.ets
common/core-agent/src/main/ets/runtime/: AgentRun.ets  ReActLoop.ets  RunGate.ets  RunRecorder.ets
common/core-agent/src/main/ets/service/: AgentRepo.ets  AgentService.ets  ChatService.ets  SkillMdCodec.ets  SkillRepo.ets
common/core-agent/src/main/ets/tools/: BuiltinTools.ets  HttpFetchTool.ets  ToolAliases.ets  ToolBus.ets
common/core-data/: Index.ets  consumer-rules.txt  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
common/core-data/src/main/: module.json5
common/core-data/src/main/ets/backup/: BackupService.ets
common/core-data/src/main/ets/db/: Migrations.ets  RdbPorts.ets  RdbStore.ets  Schema.ets
common/core-data/src/main/ets/fs/: FileRepo.ets
common/core-data/src/main/ets/model/: ModelEvents.ets  ModelRepo.ets  ProviderRepo.ets
common/core-infra/: Index.ets  consumer-rules.txt  obfuscation-rules.txt  oh-package.json5
common/core-infra/src/main/: module.json5
common/core-llm/: Index.ets  consumer-rules.txt  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
common/core-llm/src/main/: module.json5
common/core-memory/: Index.ets  consumer-rules.txt  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
common/core-memory/src/main/: module.json5
common/core-rag/: Index.ets  build-profile.json5  consumer-rules.txt  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
common/core-rag/src/main/: module.json5
common/design-system/: Index.ets  consumer-rules.txt  hvigorfile.ts  obfuscation-rules.txt  oh-package.json5
common/design-system/src/main/: module.json5
docs/: AgentDock开发计划.md  UI设计规范.md  发版检查单-V0.9.md  鸿蒙智能体平台系统设计.md
docs/spikes/: S1-llama-cpp-ohos.md  S2-fts-tokenization.md
docs/ui/: agentdock-ui-preview.html
docs/合规/: 隐私声明草案.md
features/agents/: Index.ets  consumer-rules.txt  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
features/agents/src/main/: module.json5
features/chat/: Index.ets  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
features/chat/src/main/: module.json5
features/knowledge/: Index.ets  oh-package-lock.json5  oh-package.json5
features/knowledge/src/main/: module.json5
features/memory/: Index.ets  oh-package-lock.json5  oh-package.json5
features/memory/src/main/: module.json5
features/models/: Index.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
features/models/src/main/: module.json5
features/settings/: Index.ets  oh-package-lock.json5  oh-package.json5
features/settings/src/main/: module.json5
hvigor/: hvigor-config.json5
models/: README.md  manifest.json
native/: README.md
native/doc_parsers/: Index.ets  consumer-rules.txt  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
native/doc_parsers/src/main/: module.json5
native/doc_parsers/src/main/cpp/: CMakeLists.txt  napi_entry.cpp
native/doc_parsers/src/main/cpp/types/libdoc_parsers/: index.d.ts  oh-package.json5
native/doc_parsers/src/main/ets/: DocParsers.ets  DocTypes.ets
native/llama_bridge/: Index.ets  build-profile.json5  consumer-rules.txt  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
native/llama_bridge/src/main/: module.json5
native/llama_bridge/src/main/cpp/: CMakeLists.txt  engine.cpp  engine.h  error.h  napi_entry.cpp  stream_cb.cpp  stream_cb.h  worker.cpp  worker.h
native/llama_bridge/src/main/cpp/types/libllama_bridge/: index.d.ts  oh-package.json5
native/llama_bridge/src/main/ets/: LlamaBridge.ets  LlamaTypes.ets
native/vec_index/: Index.ets  build-profile.json5  consumer-rules.txt  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
native/vec_index/src/main/: module.json5
native/vec_index/src/main/cpp/: CMakeLists.txt  napi_entry.cpp  vec_store.h
native/vec_index/src/main/cpp/types/libvec_index/: index.d.ts  oh-package.json5
native/vec_index/src/main/ets/: VecIndex.ets  VecTypes.ets
products/default/entry/: build-profile.json5  hvigorfile.ts  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
products/default/entry/src/main/: module.json5
tools/: README.md
tools/device/: deploy.sh
tools/eval/agent-run/: cases.ts  run-tests.mjs
tools/eval/compression-regression/: README.md  cases.ts  run-regression.mjs
tools/eval/docx-parse/: run-tests.mjs
tools/eval/rag-gold/: README.md  goldset.json  harness.ts  run-gold.mjs
tools/eval/rag-gold/corpus/: bridge-manual.md  pump-specs.md  standards-glossary.md
tools/eval/rag-goldenset/: README.md  goldenset.schema.json  run-eval.mjs
tools/eval/rag-perf/: gen-corpus.mjs  run-perf.mjs
tools/eval/vec-store/: run-tests.sh  test_vec_store.cpp
tools/git/: sanitize-signing.mjs
tools/license/: allowlist.json  check-deps.mjs  check-forbidden.mjs  check-spdx.mjs  gen-rawfile.mjs  scan-utils.mjs
tools/models/: check-manifest-sync.mjs  validate-manifest.mjs
tools/ui/: check-contrast.mjs  check-copy.mjs  check-glyphs.mjs  check-tokens.mjs  contrast-lib.mjs  gate.mjs  ui-debt.json
(+123 files in other folders)
